--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # compiled output
 /dist
 /node_modules
+/postgres
 
 # Logs
 logs
@@ -21,6 +22,7 @@ lerna-debug.log*
 # IDEs and editors
 /.idea
 .project
+.env
 .classpath
 .c9/
 *.launch
