--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,6 @@ DB_USER=
 DB_NAME=
 DB_PASSWORD=
 
+DATABASE_URL="postgresql://{DB_USER}:DB_PASSWORD@localhost:5432/DB_NAME?schema=public"
+
+JWT_SECRET=
